--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent" 
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
+    	
     <com.google.android.maps.MapView
         android:id="@+id/mapview"
         android:layout_width="fill_parent" 
         android:layout_height="fill_parent"
         android:enabled="true"
         android:clickable="true"
-        android:apiKey="0tfUpybHOgCEoywRcjA7JzzA5F_t6hGJL813D7Q"
+        android:apiKey="0tfUpybHOgCEfd4Ol2w1neTTYnICuZn3jve2Wbw"
         />
+
 </LinearLayout>
